test/fails/bad_generics/core7.lgl
v multiop<`t, `u, `v>(`t x, `u y, `v z) {
    return x * y * z
}

void main() {
    // Doesn't actually produce a vec2 (operation failure)
    vec2 fail = multiop<vec2->vec3, vec2->vec2, vec2>
        ([[1., 0.], [0., 1.], [0., 0.]],
        [[1., 0.], [0., 1.]],
        [1., 1.]);
}